--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,14 @@ button {
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
+button:disabled {
+	cursor: no-drop;
+	background: #e7e8ee;
+	color: #B9BCC6;
+}
+button:disabled:hover {
+	border-color: #e7e8ee;
+}
 button:hover {
 	border-color: #3c3f44;
 }
