--- a/src/input.css
+++ b/src/input.css
@@ -1,7 +1,7 @@
-.filed:focus-within {
+.field:focus-within {
     border-color: #4A88FC;
 }
-.filed:focus-within .field-label {
+.field:focus-within .field-label {
     color: #4A88FC;
 }
 
@@ -12,4 +12,5 @@
     translate: 0 -50%;
     color: darkgray;
     transition-duration: 150ms;
+    transform-origin: left;
 }
